--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,6 @@
 </head>
 <body>
      <h1>Email: cabralespriegogalilea@gmail.com</h1>
-        <p>Estudiante</p>
+        <p>Estudiante de Maestría</p>
 </body>
 </html>
